<resources>
    <string name="app_name">BilleteraModulo4</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="billetera_digital_titulo">Billetera Virtual</string>
    <string name="billetera_digital_saludo">Bienvenido</string>
    <string name="billetera_digital_saldo">Saldo</string>
    <string name="billetera_digital_transacciones">Transacciones</string>
    <string name="billetera_digital_agregar">Agregar</string>
    <string name="billetera_digital_eliminar">Eliminar</string>
    <string name="billetera_digital_editar">Editar</string>
    <string name="billetera_digital_agregar_transaccion">Agregar Transaccion</string>
    <string name="billetera_digital_agregar_transaccion_descripcion">Descripcion</string>
    <string name="billetera_digital_agregar_transaccion_monto">Monto</string>
    <string name="billetera_digital_agregar_transaccion_agregar">Agregar</string>
    <string name="billetera_digital_agregar_transaccion_cancelar">Cancelar</string>
    <string name="billetera_digital_agregar_transaccion_error">Error al agregar la transaccion</string>
    <string name="registrarse_y_empezar_a_transferir">Registrarse y empezar a transferir</string>
    <string name="ya_tienes_una_cuenta">Ya tienes una cuenta ??</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="ingresar_nombre">Ingresar Nombre</string>
    <string name="ingresar_apellido">Ingresar Apellido</string>
    <string name="ingresar_correo">Ingresar Correo</string>
    <string name="ingresar_contrase_a">Ingresar Contraseña</string>
    <string name="reingresar_contrase_a">Reingresar Contraseña</string>
    <string name="inicio">Inicio</string>
    <string name="balance_total">Balance Total</string>
    <string name="_23_500_000">$ 23.500.000</string>
    <string name="hola_pamela">Hola, Pamela!</string>
    <string name="maria_rojas">Maria Rojas</string>
    <string name="oct_14_10_24_am">Oct 14, 10:24 AM</string>
    <string name="_25_000">- $ 25.000</string>
    <string name="susana_perez">Susana Perez</string>
    <string name="oct_12_02_13_pm">Oct 12, 02:13 PM</string>
    <string name="_15_000">+ $ 15.000</string>
    <string name="rodrigo_salas">Rodrigo Salas</string>
    <string name="oct_11_01_19_am">Oct 11, 01:19 AM</string>
    <string name="_8_900">+ $ 8.900</string>
    <string name="tania_rojas">Tania Rojas</string>
    <string name="oct_07_09_10_am">Oct 07, 09:10 AM</string>
    <string name="_29_000">- $ 29.000</string>
    <string name="enviar_dinero">Enviar Dinero</string>
    <string name="ingresar_dinero">Ingresar Dinero</string>
    <string name="ultimas_transacciones">Ultimas Transacciones</string>
    <string name="no_hay_transacciones_registradas">No hay transacciones registradas !</string>
    <string name="ingresa_tus_datos_para_acceder">Ingresa tus datos para acceder</string>
    <string name="ingresa_tu_email">Ingresa tu Email</string>
    <string name="ingresa_tu_contrase_a">Ingresa tu Contraseña</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu Contraseña?</string>
    <string name="login">Login</string>
    <string name="crear_una_nueva_cuenta">Crear una nueva cuenta</string>
    <string name="billetera_virtual">Billetera Virtual</string>
    <string name="el_lugar_mas_seguro_para_tu_dinero">El lugar mas seguro para tu dinero</string>
    <string name="crear_una_cuenta_nueva">Crear una cuenta nueva</string>
    <string name="ya_tiene_cuenta">Ya tienes una cuenta ?</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="pamela_alkemy">Pamela Alkemy</string>
    <string name="mi_informacion">Mi Informacion</string>
    <string name="mis_tarjetas">Mis Tarjetas</string>
    <string name="opciones">Opciones</string>
    <string name="centro_de_ayuda">Centro de Ayuda</string>
    <string name="tania_rojas_gmail_com">Tania.rojas@gmail.com</string>
    <string name="cantidad_a_ingresar">Cantidad a Ingresar</string>
    <string name="_55_000">$ 55.000</string>
    <string name="agregar_notas_de_transferencia_opcional">Agregar Notas de Transferencia (opcional)</string>
    <string name="rodrigo_fuentes">Rodrigo Fuentes</string>
    <string name="rodrigo_fuentes_gmail_com">Rodrigo.fuentes@gmail.com</string>
    <string name="cantidad_a_transferir">Cantidad a Transferir</string>
    <string name="notas_de_transferencia">Notas de Transferencia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>