<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="411dp"
            android:layout_height="891dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/fondo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="323dp"
            android:layout_height="93dp"
            android:text="@string/ingresa_tus_datos_para_acceder"
            android:textAlignment="textStart"
            android:textColor="#CFB6B6"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.166" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="323dp"
            android:layout_height="80dp"
            android:ems="10"
            android:hint="@string/ingresa_tu_email"
            android:inputType="textEmailAddress"
            android:textColorHint="#CFB6B6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.325" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="324dp"
            android:layout_height="79dp"
            android:drawableRight="@mipmap/ic_launcher_foreground"
            android:ems="10"
            android:hint="@string/ingresa_tu_contrase_a"
            android:inputType="textPassword"
            android:textColorHint="#CFB6B6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.475" />

        <TextView
            android:id="@+id/editTextText3"
            android:layout_width="204dp"
            android:layout_height="36dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/olvidaste_tu_contrase_a"
            android:textAlignment="textEnd"
            android:textColor="#CFB6B6"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.781"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.549" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="339dp"
            android:layout_height="46dp"
            android:backgroundTint="#631C9A"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.848" />

        <TextView
            android:id="@+id/crear_una_nueva_cuenta_login"
            android:layout_width="222dp"
            android:layout_height="35dp"
            android:text="@string/crear_una_nueva_cuenta"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.913" />

        <ImageView
            android:id="@+id/fondologin"
            android:layout_width="337dp"
            android:layout_height="578dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.083"
            app:srcCompat="@mipmap/flechafondo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>