<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageEmptyCase">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="411dp"
            android:layout_height="891dp"
            app:srcCompat="@mipmap/pantallabicolor"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp" />

        <TextView
            android:id="@+id/emptyview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_hay_transacciones_registradas"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.831" />

        <TextView
            android:id="@+id/emptyview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ultimas_transacciones"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.342" />

        <LinearLayout
            android:id="@+id/botonesempty"
            android:layout_width="365dp"
            android:layout_height="70dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.403">

            <Button
                android:id="@+id/enviardineroemptypage"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:backgroundTint="#4962BF"
                android:drawableLeft="@mipmap/envia_icon"
                android:text="@string/enviar_dinero" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/ingresardineroemptypage"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:backgroundTint="#631C9A"
                android:drawableLeft="@mipmap/recibe_icon"
                android:text="@string/ingresar_dinero" />
        </LinearLayout>

        <ImageView
            android:id="@+id/profileuserempty"
            android:layout_width="71dp"
            android:layout_height="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.86"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.078"
            app:srcCompat="@mipmap/usuario" />

        <TextView
            android:id="@+id/totalempty"
            android:layout_width="206dp"
            android:layout_height="64dp"
            android:ems="10"
            android:text="@string/_23_500_000"
            android:textColor="#FDFDFD"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.175"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.249" />

        <TextView
            android:id="@+id/balanceempty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/balance_total"
            android:textColor="#FDFDFD"
            android:textSize="22dp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.236"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19" />

        <TextView
            android:id="@+id/holaempty"
            android:layout_width="141dp"
            android:layout_height="35dp"
            android:text="@string/hola_pamela"
            android:textColor="#FDFDFD"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.133"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.14" />

        <TextView
            android:id="@+id/inicioempty"
            android:layout_width="103dp"
            android:layout_height="31dp"
            android:text="@string/inicio"
            android:textColor="#FFFFFF"
            android:textSize="22dp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.116"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.094" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="225dp"
            android:layout_height="296dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView9"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.754"
            app:srcCompat="@mipmap/empty_illustration" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="44dp"
            android:layout_height="44dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView9"
            app:layout_constraintHorizontal_bias="0.874"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.244"
            app:srcCompat="@mipmap/notification" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>